--- a/examples/hello-world/client/imports/app.component.html
+++ b/examples/hello-world/client/imports/app.component.html
@@ -10,7 +10,7 @@
 <input type="search" placeholder="Type name..." [formControl]="nameControl" />
 
 <ul>
-  <li *ngFor="let user of data | async | apolloQuery: 'users'">
+  <li *ngFor="let user of users | async">
     {{user.firstName}} {{user.lastName}}
   </li>
 </ul>
